// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-lark destination: createUsageEvent action - all fields 1`] = `
Object {
  "data": Object {
    "testType": "I^0%Rd(2ed^lM1PC",
  },
  "event_name": "I^0%Rd(2ed^lM1PC",
  "idempotency_key": "I^0%Rd(2ed^lM1PC",
  "subject_id": "I^0%Rd(2ed^lM1PC",
  "timestamp": "2021-02-01T00:00:00.000Z",
}
`;

exports[`Testing snapshot for actions-lark destination: createUsageEvent action - required fields 1`] = `
Object {
  "event_name": "I^0%Rd(2ed^lM1PC",
  "idempotency_key": "I^0%Rd(2ed^lM1PC",
  "subject_id": "I^0%Rd(2ed^lM1PC",
}
`;
